<resources>
    <string name="app_name">Point Of Sale</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_remove">Remove</string>
    <string name="action_removeall">Remove All Items</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="item_title">Item ordered</string>
    <string name="name_format">%s</string>
    <string name="quantity_format">Quantity: %d</string>
    <string name="date_format">Delivery date: %s</string>
    <string name="name_start">- - - -</string>
    <string name="name_dialog">What do you want to buy?</string>
    <string name="name_hint">Item name</string>
    <string name="quantity_start">Quantity</string>
    <string name="quantity_dialog">Quantity</string>
    <string name="date_start">Delivery date</string>
    <string name="date_dialog">Delivery date</string>
    <string name="dialog_itemlist_title">Choose an item</string>
    <string name="confirmation_dialog_removeall">Are you sure you want to remove all items?</string>
    <string name="confirmation_snack_removeone">Item removed</string>
    <string name="confirmation_snack_restored">Item restored</string>
</resources>
