<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.ruszkipista.pointofsale.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_removeall"
        android:orderInCategory="100"
        android:title="@string/action_removeall"
        app:showAsAction="never"
        />

</menu>
